Wed Nov 11 12:54:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ruby_setenv): use ruby_strdup().

Wed Nov 11 12:19:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (ruby_setenv): also set CRT workarea.  ref [ruby-core:25010]

Wed Nov 11 09:36:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object, r_object0): use RHASH_IFNONE but not ifnone
	  directly.

Wed Nov 11 08:32:45 2009  Tanaka Akira  <akr@fsij.org>

	* thread.c (blocking_region_begin): define before BLOCKING_REGION.
	  reported by Luis Lavena.  [ruby-core:26670]

Wed Nov 11 08:22:19 2009  Tanaka Akira  <akr@fsij.org>

	* util.c (ruby_strtod): use dval() consistently.

Wed Nov 11 02:14:48 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/matrix/test_matrix.rb (TestMatrix#test_rank):
	  added a test method for r24969.

Tue Nov 10 08:23:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_f_exec, rb_f_system, rb_f_spawn): mentioned abou
	  the shell to be used when the command line is single string.
	  See [ruby-core:26652]

Mon Nov  9 20:56:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (do_stat, do_lstat): fixed typo.

Mon Nov  9 20:15:16 2009  Tanaka Akira  <akr@fsij.org>

	* thread.c (rb_gc_save_machine_context): don't save the stack pointer
	  in this function.
	  (RB_GC_SAVE_MACHINE_CONTEXT): call rb_gc_save_machine_context and
	  save the stack pointer at caller side.
	  (rb_thread_schedule_rec): use RB_GC_SAVE_MACHINE_CONTEXT instead of
	  rb_gc_save_machine_context.
	  (blocking_region_begin): changed to a macro.  use
	  RB_GC_SAVE_MACHINE_CONTEXT instead of rb_gc_save_machine_context.
	  [ruby-dev:39659]

Mon Nov  9 11:28:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (warnflags): add -Wno-long-long.

Sun Nov  8 18:13:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c: use RHASH_IFNONE but not ifnone directly.

Sat Nov  7 21:02:57 2009  Tanaka Akira  <akr@fsij.org>
